# slam_opt_compare

./: .gitignore  CMakeLists.txt  README.md
include/: ceres_solver.hpp  g2o_solver.hpp  pose_graph.hpp
scripts/: download_data.sh  plot_result.py
src/: ceres_solver.cpp  g2o_solver.cpp  main.cpp  pose_graph.cpp
